--- a/dc-commons-springmvc/src/main/resources/de/digitalcollections/commons/springmvc/thymeleaf/templates/error.html
+++ b/dc-commons-springmvc/src/main/resources/de/digitalcollections/commons/springmvc/thymeleaf/templates/error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="base">
+      layout:decorate="~{base}">
   <body>
     <section layout:fragment="content">
       <h1 th:text="#{error.title}">Fehler</h1>
