--- a/dc-commons-springmvc/src/main/resources/de/digitalcollections/commons/springmvc/thymeleaf/templates/error.html
+++ b/dc-commons-springmvc/src/main/resources/de/digitalcollections/commons/springmvc/thymeleaf/templates/error.html
@@ -4,15 +4,32 @@
       layout:decorate="~{base}">
   <body>
     <section layout:fragment="content">
-      <h1 th:text="#{error.title}">Fehler</h1>
-      <div class="well">    
-        <th:block th:if="#{errorCode != null}" >
-          <span th:text="#{error.DEFAULT_MESSAGE}">Error Message</span>
-          <p/>
-          <span th:text="#{error.errorCode}">Error code</span> <b th:if="${errorCode}" th:text="${errorCode}">Error code</b> <span th:text="${timestamp}">13.12.2014 15:30:00.123</span>
-        </th:block>
-        <p th:if="${exception}" th:text="${exception.message}">Exception message</p>
-        <p th:if="${exception}" th:text="${exception.class}">Exception class</p>
+
+      <div class="error-page">
+        <h3 th:text="#{error.page_title}">Ooops!</h3>
+
+        <h1>
+          <label th:text="#{error.status_code}">Status code</label>: <span th:text="${status}">The status code</span>
+        </h1>
+        <p>
+          <label th:text="#{error.reason}">Error reason</label>: <span th:text="${error}">The error reason</span>
+        </p>
+        <p>
+          <label th:text="#{error.message}">Error message</label>: <span th:text="${message}">The exception message</span>
+        </p>
+        <p>
+          <label th:text="#{error.url-path}">Called url path</label>: <span th:text="${path}">The URL path when the exception was raised</span>
+        </p>
+        <p>
+          <label th:text="#{error.timestamp}">Time error occured</label>: <span th:text="${timestamp}">The time that the errors were extracted</span>
+        </p>
+        
+        <p th:if="${exception}">
+          <label th:text="#{error.exception}">Exception</label>: <span th:text="${exception}">The class name of the root exception (if configured)</span>
+        </p>
+        <p th:if="${trace}">
+          <label th:text="#{error.stacktrace}">Stacktrace</label>: <span th:text="${trace}">The exception stack trace</span>
+        </p>
       </div>
     </section>
   </body>
